# houzzkit-ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
components/esp-wifi-connect/: CMakeLists.txt  wifi_configuration_ap.cc
components/esp-wifi-connect/include/: wifi_configuration_ap.h
components/esphome/: CMakeLists.txt  esphome.h
components/esphome/esphome/: define.h
components/esphome/esphome/components/api/: api_pb2.cpp  api_pb2.h
components/esphome/esphome/components/esp32/: core.cpp
components/esphome/esphome/components/network/: util.cpp
components/esphome/esphome/core/: defines.h  log.h  time.cpp  version.h
components/libsodium/: CMakeLists.txt
components/noise-c/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  idf_component.yml  main.cc  mcp_server.cc  ota.cc  settings.cc  settings.h  system_info.cc  system_info.h
main/assets/emoji_large/: Happy.eaf
main/assets/locales/zh-CN/: language.json
main/assets/locales/zh-TW/: language.json
main/audio/processors/: afe_audio_processor.h
main/ble/: ble_manager.cc  ble_manager.h  byte_protocol.h  proto_parse.cc  proto_parse.h
main/boards/common/: board.h  ml307_board.cc  ml307_board.h  wifi_board.cc  wifi_board.h
main/boards/esp32-s3-touch-lcd-1.85c/: config.json  esp32-s3-touch-lcd-1.85c.cc
main/display/: display.cc  display.h  lcd_display.cc  lcd_display.h  oled_display.cc  oled_display.h
main/esphome/: esphome_device.cc  esphome_device.h  sleep_mode_time_interval.cc  sleep_mode_time_interval.h
main/protocols/: protocol.cc  protocol.h  websocket_protocol.cc
scripts/: build_default_assets.py  release.py
scripts/spiffs_assets/: build.py
