idf_component_register(
    SRCS
        "src/backend/openssl/cipher-aesgcm.c"
        "src/backend/ref/cipher-aesgcm.c"
        "src/backend/ref/cipher-chachapoly.c"
        "src/backend/ref/dh-curve25519.c"
        "src/backend/ref/hash-blake2b.c"
        "src/backend/ref/hash-blake2s.c"
        "src/backend/ref/hash-sha256.c"
        "src/backend/sodium/cipher-aesgcm.c"
        "src/backend/sodium/cipher-chachapoly.c"
        "src/backend/sodium/dh-curve25519.c"
        "src/backend/sodium/hash-blake2b.c"
        "src/backend/sodium/hash-sha256.c"
        "src/crypto/aes/rijndael-alg-fst.c"
        "src/crypto/blake2/blake2b.c"
        "src/crypto/blake2/blake2s.c"
        "src/crypto/chacha/chacha.c"
        "src/crypto/donna/curve25519-donna-c64.c"
        "src/crypto/donna/curve25519-donna.c"
        "src/crypto/donna/poly1305-donna.c"
        "src/crypto/sha2/sha256.c"
        "src/crypto/sha2/sha512.c"
        "src/crypto/x25519/x25519.c"
        "src/protocol/cipherstate.c"
        "src/protocol/dhstate.c"
        "src/protocol/errors.c"
        "src/protocol/handshakestate.c"
        "src/protocol/hashstate.c"
        "src/protocol/internal.c"
        "src/protocol/names.c"
        "src/protocol/patterns.c"
        "src/protocol/rand_os.c"
        "src/protocol/rand_sodium.c"
        "src/protocol/randstate.c"
        "src/protocol/signstate.c"
        "src/protocol/symmetricstate.c"
        "src/protocol/util.c"
    INCLUDE_DIRS
        "include"
        "src"
    PRIV_REQUIRES 
        "libsodium"
)